Fix word break on collection/library pickers

--- a/webapp/WEB-INF/base/emfrontend2/theme/styles/theme.css
+++ b/webapp/WEB-INF/base/emfrontend2/theme/styles/theme.css
@@ -98,6 +98,7 @@ body {
     padding: .275rem .75rem;
     font-size: 1rem;
     line-height: 1.3;
+    width: auto;
 }
 select.form-control:not([size]):not([multiple]) {
     height: calc(2rem);
@@ -3144,4 +3145,8 @@ a.collectionbox.favorite
     padding-top: 10px;
     background: url('../images/attachments-icon.png') left 7px no-repeat;
     margin: 0 3px;
+}
+
+.select2-results__option[aria-selected] {
+    word-break: break-word;
 }
